--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,37 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Page title</title>
+    <title>HW-JS-10</title>
+    <link rel="icon" type="image/png" href="./images/favicon-32x32.png" />
     <link rel="stylesheet" href="./sass/index.scss" />
-    <script type="module" src="./index.js"></script>
   </head>
   <body>
-    <!-- ❗️❗️❗️ Add partials like so for every page -->
-    <include src="./partials/example.html"></include>
+    <section class="section scroll-container" id="scroll-container-id">
+      <form class="search-form" id="search-form">
+        <input
+          type="text"
+          name="searchQuery"
+          autocomplete="off"
+          placeholder="Search images..."
+        />
+        <button type="submit">Search</button>
+      </form>
+
+      <div class="gallery"></div>
+      <img
+        class="loader hidden"
+        src="./images/ZZ5H.gif"
+        alt="loader"
+        width="40"
+      />
+
+      <img
+        class="home-btn hidden"
+        src="./images/arrow-up.svg"
+        alt="arrow"
+        width="35px"
+      />
+    </section>
+    <script type="module" src="./index.js"></script>
   </body>
 </html>
